# bookmaker-scraper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/auth/: bookmaker_auth.py
src/data/: reference_loader.py
src/market/: market_fetcher.py
src/monitoring/: health_monitor.py
src/parser/: message_enricher.py  message_parser.py  output_formatter.py
src/utils/: logger.py
src/websocket/: stomp_client.py  stomp_frames.py
tests/manual/: check_game_id_mapping.py  debug_reference_data.py  demo_enriched_odds.py  find_market_api.py  inspect_game_structure.py  inspect_login_page.py  quick_test_game_api.py  quick_websocket_test.py  test_get_game_info.py  test_health_monitor_integration.py  test_market_fetcher_integration.py  test_market_full_flow.py  test_real_auth.py  test_reference_loader.py  test_websocket_integration.py  visual_debug.py
tests/unit/: test_auth.py  test_health_monitor.py  test_logger.py  test_market_fetcher.py  test_message_enricher.py  test_message_parser.py  test_stomp_client.py
