[tool.poetry]
name = "bookmaker-scraper"
version = "0.1.0"
description = "WebSocket scraper for Bookmaker.eu real-time odds data"
authors = ["Ashkan Goharfar <ashkan.goharfar@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^16.0"
aiohttp = "^3.13.3"
playwright = "^1.58.0"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
python-dotenv = "^1.2.1"
openai = "^2.21.0"
aiostomp = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
black = "^26.1.0"
ruff = "^0.15.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
